--- a/scss/style.scss
+++ b/scss/style.scss
@@ -237,7 +237,7 @@ text-decoration: none;
 
 .slider-controls{
   position: absolute;
-  left:40px;
+  left:62px;
   top:550px;
   z-index: 20;
 }
@@ -588,7 +588,7 @@ display: none;
   width:50px;
   height: 50px;
   left:-3px;
-  background: url(../svg/cow.svg) no-repeat;
+  background: url('../svg/cow.svg') no-repeat;
 }
 
 .about-range__text--eco::before{
